[package]
name = "haaspylib"
version = "0.1.0"
edition = "2021"

[lib]
name = "haaspylib"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
haaslib = { path = "../haaslib/main"}
log = "0.4.20"
pyo3 = { version = "0.20.2", features = ["extension-module"]}
serde = { version = "1.0.195", features = ["derive"] }
